@@ -1,3 +1,4 @@
+- fix for when user removes username/password
 - setting interface password fix
 - fix for blanking out setting parameters
 - add slideshow to + options
